--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="chamber.html">Chamber</a></li>
             <li><a href="site-plan.html">Site Plan</a></li>
             <li><a href="form.html">Form</a></li>
+            <li><a href="chamber-site-plan.html">chamber site-plan</a></li>
         </ul>
     </nav>
     <main>
