--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Victor Provost - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
