Social Media Meta Tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <meta name="description" content="My name is victor provost and this is a web frontend development WDD230 course.">
     <meta name="author" content="Victor Provost">
+    <meta property="og:title" content="Victor Provost - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://example.com/images/hometown.jpg">
+    <meta property="og:url" content="https://example.com/index.html">
     <title>Victor Provost - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
