--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <li><a href="form.html">Form</a></li>
             <li><a href="chamber-site-plan.html">Chamber Site-Plan</a></li>
             <li><a href="design.html">Design</a></li>
+            <li><a href="https://codepen.io/Victorprovost" target="_blank">Week 2 CodePen</a></li>
+              
         </ul>
     </nav>
     <main>
