--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="chamber-site-plan.html">Chamber Site-Plan</a></li>
             <li><a href="design.html">Design</a></li>
             <li><a href="https://codepen.io/Victorprovost" target="_blank">Week 2 CodePen</a></li>
-              
+            <li><a href="week02/bom.html">Book of Mormon</a></li> 
         </ul>
     </nav>
     <main>
