--- a/index.html
+++ b/index.html
@@ -3,35 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="description" content="My name is victor provost and this is a web frontend development WDD230 course.">
+    <meta name="description" content="Victor Provost's WDD 230 Web Frontend Development course page.">
     <meta name="author" content="Victor Provost">
     <meta property="og:title" content="Victor Provost - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://example.com/images/hometown.jpg">
     <meta property="og:url" content="https://example.com/index.html">
     <title>Victor Provost - WDD 230 - Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
-        <img src="images/profile_photo.jpg" alt="Victor Provost" width="100" height="100">
-        <span>Victor Provost - WDD 230</span>
+        <img src="images/profile_photo.jpg" alt="Victor Provost profile photo" width="100" height="100">
+        <h1>Victor Provost - WDD 230</h1>
     </header>
-    <nav>
+    <nav class="main-nav">
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="chamber.html">Chamber</a></li>
+            <li><a href="week01/chamber-site-plan.html">Chamber</a></li>
             <li><a href="site-plan.html">Site Plan</a></li>
             <li><a href="form.html">Form</a></li>
-            <li><a href="chamber-site-plan.html">Chamber Site-Plan</a></li>
             <li><a href="design.html">Design</a></li>
-            <li><a href="https://codepen.io/Victorprovost" target="_blank">Week 2 CodePen</a></li>
-            <li><a href="week02/bom.html">Book of Mormon</a></li> 
+            <li><a href="https://codepen.io/Victorprovost" target="_blank" rel="noopener">Week 2 CodePen</a></li>
+            <li><a href="week02/bom.html">Book of Mormon</a></li>
         </ul>
     </nav>
     <main>
@@ -39,23 +36,22 @@
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-            <li><a href="#">Activity 1</a></li>
-            <li><a href="#">Activity 2</a></li>
-            <li><a href="#">Activity 3</a></li>
+                <li><a href="#">Activity 1</a></li>
+                <li><a href="#">Activity 2</a></li>
+                <li><a href="#">Activity 3</a></li>
             </ul>
         </section>
         <section class="card">
             <h2>Information</h2>
-            <p>Weather: Placeholder for weather information</p>
-            <p>Number of visits: Placeholder for visit count</p>
-        </section></section>
-        <p>This is the main content area.</p>
+            <p>Weather: <span id="weather">Loading weather...</span></p>
+            <p>Number of visits: <span id="visits">Loading visits...</span></p>
+        </section>
+        
     </main>
     <footer>
-        <p>&copy; <span id="year"></span> Victor Provost, Nigeria</p>
-        <p id="lastModified"></p>
+        <p>© <span id="year">2025</span> Victor Provost, Nigeria</p>
+        <p id="lastModified">Last modified: <span>Loading...</span></p>
     </footer>
     <script src="scripts/getDates.js"></script>
-    
 </body>
 </html>
