--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="https://example.com/images/hometown.jpg">
     <meta property="og:url" content="https://example.com/index.html">
     <title>Victor Provost - WDD 230 - Web Frontend Development</title>
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css"> <!-- Custom normalization first -->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
@@ -19,8 +19,10 @@
     <header>
         <img src="images/profile_photo.jpg" alt="Victor Provost profile photo" width="100" height="100">
         <h1>Victor Provost - WDD 230</h1>
+        <button id="dark-mode-toggle" class="dark-mode-toggle">🌙</button>
+        <button id="menu-toggle" class="menu-toggle">☰</button>
     </header>
-    <nav class="main-nav">
+    <nav class="main-nav" id="main-nav">
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="week01/chamber-site-plan.html">Chamber</a></li>
@@ -31,7 +33,7 @@
             <li><a href="week02/bom.html">Book of Mormon</a></li>
         </ul>
     </nav>
-    <main>
+    <main id="main-content">
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
@@ -46,12 +48,11 @@
             <p>Weather: <span id="weather">Loading weather...</span></p>
             <p>Number of visits: <span id="visits">Loading visits...</span></p>
         </section>
-        
     </main>
     <footer>
         <p>© <span id="year">2025</span> Victor Provost, Nigeria</p>
         <p id="lastModified">Last modified: <span>Loading...</span></p>
     </footer>
-    <script src="scripts/getDates.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
