add the nesseary changes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <li><a href="design.html">Design</a></li>
             <li><a href="https://codepen.io/Victorprovost" target="_blank" rel="noopener">Week 2 CodePen</a></li>
             <li><a href="week02/bom.html">Book of Mormon</a></li>
+            <li><a href="week03/images/landscape.webp">WebP</a></li>
+            <li><a href="week03/lazyload.html">lazyload</a></li>
+            <li><a href="week03/responsive-images.html">Responsive Images</a></li>
         </ul>
     </nav>
     <main id="main-content">
