--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="week03/images/landscape.webp">WebP</a></li>
             <li><a href="week03/lazyload.html">lazyload</a></li>
             <li><a href="week03/responsive-images.html">Responsive Images</a></li>
+            <li><a href="chamber/index.html">chamber page</a></li>
         </ul>
     </nav>
     <main id="main-content">
