--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Membership</a></li>
-                <li><a href="#">Events</a></li>
+                <li><a href="discover.html">Events</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
