--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                 <li><a href="https://codepen.io/Victorprovost" target="_blank" rel="noopener">Week 2 CodePen</a></li>
                 <li><a href="week03/responsive-images.html">Responsive Images</a></li>
                 <li><a href="week03/images/landscape.webp">WebP</a></li>
-                <li><a href="week03/lazyload.html">Lazyload</a></li>
-            </ul>
+                <li><a href="week03/lazyload.html">Lazyload</a></l>
+                </li><a href="https://codepen.io/blazzard-jason/pen/PoaQgXJ" target="_blank">View My CodePen Project</a>
+                <li><a href="week04/tablebuild.html">Table Build</a></li>
+     
         </section>
         <section class="card information">
             <h2>Information</h2>
