--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Membership</a></li>
+                <li><a href="join.html">Membership</a></li>
                 <li><a href="discover.html">Events</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
